--- a/index.html
+++ b/index.html
@@ -1,71 +1,127 @@
 <!DOCTYPE html>
 <!-- saved from url=(0022)http://sanscolour.com/ -->
-<html class="js no-touch csstransforms3d wf-inactive"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <!--[if lt IE 8]><script>
-       // location.href="please-upgrade-your-browser.html";
-      </script><![endif]--> <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"> <title>Sans Colour — Graphic + Interactive design</title> <meta name="description" content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York."> <meta name="HandheldFriendly" content="True"> <meta name="MobileOptimized" content="320"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="apple-mobile-web-app-capable" content="yes"> <link rel="apple-touch-icon" href="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg"> <link rel="apple-touch-icon" sizes="72x72" href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_72x72.gif"> <link rel="apple-touch-icon" sizes="114x114" href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_114x114.gif"> <link rel="apple-touch-icon" sizes="144x144" href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_144x144.gif"> <meta property="og:title" content="Sans Colour — Graphic + Interactive design"> <meta property="og:url" content="http://www.sanscolour.com/"> <meta property="og:description" content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York."> <meta property="og:site_name" content="Sans Colour — Graphic + Interactive design"> <meta property="og:image" content="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg"> <meta property="og:type" content="website"> <meta itemprop="name" content="Sans Colour — Graphic + Interactive design"> <meta itemprop="description" content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York."> <meta itemprop="image" content="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:site" content="@joakimjansson"> <meta name="twitter:creator" content="@joakimjansson"> <meta name="twitter:title" content="Sans Colour — Graphic + Interactive design"> <meta name="twitter:description" content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York."> <meta name="twitter:image:src" content="http://cdn.sanscolour.com/images/meta/SansColour_TwitterCard.gif"> <meta http-equiv="cleartype" content="on"> <link rel="shortcut icon" href="http://cdn.sanscolour.com/images/meta/SansColour_Shortcut_Icon_32x32.gif"> <style>
-      .fs-img {
-        width: 100%;
-        max-width: 1200px;
-        font-family:'image-set( url(-small|-small-2x) 2x high-bandwidth )';
-        display: none;
-      }
-      .debug-mode .fs-img {
-        border-bottom:4px solid gray;
-      }
-      @media (min-width: 40em) {
+<html class="js no-touch csstransforms3d wf-inactive">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!--[if lt IE 8]>
+    <script>
+        // location.href="please-upgrade-your-browser.html";
+    </script>
+    <![endif]-->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <title>饶苡苓个人作品展示</title>
+    <meta name="description"
+          content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg">
+    <link rel="apple-touch-icon" sizes="72x72"
+          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_72x72.gif">
+    <link rel="apple-touch-icon" sizes="114x114"
+          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_114x114.gif">
+    <link rel="apple-touch-icon" sizes="144x144"
+          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_144x144.gif">
+    <meta property="og:title" content="Sans Colour — Graphic + Interactive design">
+    <meta property="og:url" content="http://www.sanscolour.com/">
+    <meta property="og:description"
+          content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
+    <meta property="og:site_name" content="Sans Colour — Graphic + Interactive design">
+    <meta property="og:image" content="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg">
+    <meta property="og:type" content="website">
+    <meta itemprop="name" content="Sans Colour — Graphic + Interactive design">
+    <meta itemprop="description"
+          content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
+    <meta itemprop="image" content="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@joakimjansson">
+    <meta name="twitter:creator" content="@joakimjansson">
+    <meta name="twitter:title" content="Sans Colour — Graphic + Interactive design">
+    <meta name="twitter:description"
+          content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
+    <meta name="twitter:image:src" content="http://cdn.sanscolour.com/images/meta/SansColour_TwitterCard.gif">
+    <meta http-equiv="cleartype" content="on">
+    <link rel="shortcut icon" href="http://cdn.sanscolour.com/images/meta/SansColour_Shortcut_Icon_32x32.gif">
+    <style>
         .fs-img {
-          font-family:'image-set( url(-small|-medium), url(-small|-medium-2x) 2x high-bandwidth )';
+            width: 100%;
+            max-width: 1200px;
+            font-family: 'image-set( url(-small|-small-2x) 2x high-bandwidth )';
+            display: none;
         }
-        .debug-mode .fs-img {
-          border-bottom: 4px solid red;
-        }
-      }
-      @media (min-width: 75em) {
-        .fs-img {
-          font-family:'image-set( url(-small|-large), url(-small|-large-2x) 2x high-bandwidth )';
-        }
-        .debug-mode .fs-img {
-          border-bottom: 4px solid green;
-        }
-      }
-    </style> <script type="text/javascript" src="./tracker.js.下载"></script><script async="" src="./analytics.js.下载"></script><script src="./webfont.js.下载" type="text/javascript" async=""></script><script>
-      // configuration
-      foresight = {
-        options: {
-          // forcedPixelRatio: 1,
-          // forcedBandwidth: 'high' // high or low
-          // minKbpsForHighBandwidth: 800,
-          // speedTestExpireMinutes: 60,
-          speedTestUri: 'http://cdn.sanscolour.com/images/speed-test/50K.jpg',
-          speedTestKB: 50
-        }
-      };
-    </script> <link href="./all-321fd7e1.css" media="screen" rel="stylesheet"> <script>
-      WebFontConfig = { fontdeck: { id: '15513' } };
 
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
-    </script> <script src="./modernizr.custom-2fccca13.js.下载"></script> <!--[if lt IE 9]><script src="javascripts/vendor/scottjehl/respond.min-2928c408.js"></script><![endif]--> <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-.en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
-}
+        .debug-mode .fs-img {
+            border-bottom: 4px solid gray;
+        }
 
-.en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}
-</style>
+        @media (min-width: 40em) {
+            .fs-img {
+                font-family: 'image-set( url(-small|-medium), url(-small|-medium-2x) 2x high-bandwidth )';
+            }
+
+            .debug-mode .fs-img {
+                border-bottom: 4px solid red;
+            }
+        }
+
+        @media (min-width: 75em) {
+            .fs-img {
+                font-family: 'image-set( url(-small|-large), url(-small|-large-2x) 2x high-bandwidth )';
+            }
+
+            .debug-mode .fs-img {
+                border-bottom: 4px solid green;
+            }
+        }
+    </style>
+    <script type="text/javascript" src="./tracker.js.下载"></script>
+    <script async="" src="./analytics.js.下载"></script>
+    <script src="./webfont.js.下载" type="text/javascript" async=""></script>
+    <script>
+        // configuration
+        foresight = {
+            options: {
+                // forcedPixelRatio: 1,
+                // forcedBandwidth: 'high' // high or low
+                // minKbpsForHighBandwidth: 800,
+                // speedTestExpireMinutes: 60,
+                speedTestUri: 'http://cdn.sanscolour.com/images/speed-test/50K.jpg',
+                speedTestKB: 50
+            }
+        };
+    </script>
+    <link href="./all-321fd7e1.css" media="screen" rel="stylesheet">
+    <script>
+        WebFontConfig = {fontdeck: {id: '15513'}};
+
+        (function () {
+            var wf = document.createElement('script');
+            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+                    '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+            wf.type = 'text/javascript';
+            wf.async = 'true';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wf, s);
+        })();
+    </script>
+    <script src="./modernizr.custom-2fccca13.js.下载"></script>
+    <!--[if lt IE 9]>
+    <script src="javascripts/vendor/scottjehl/respond.min-2928c408.js"></script><![endif]-->
+    <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+    .en-markup-crop-options {
+        top: 18px !important;
+        left: 50% !important;
+        margin-left: -100px !important;
+        width: 200px !important;
+        border: 2px rgba(255, 255, 255, .38) solid !important;
+        border-radius: 4px !important;
+    }
+
+    .en-markup-crop-options div div:first-of-type {
+        margin-left: 0px !important;
+    }
+    </style>
     <script src="./15513.js.下载"></script>
 </head>
 <body class="index parallax-enabled">
@@ -80,7 +136,7 @@
                 <ul class="project-list">
                     <li id="project-list__item--home" class="project-list__item is-active" data-block-id="home">
                         <span
-                            class="project-list__item__title">首页</span>
+                                class="project-list__item__title">首页</span>
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
                         <span class="project-list__item__title">理疗会所管理SASSp平台</span>
@@ -89,7 +145,8 @@
                         data-block-id="akerBryggeDisplay">
                         <span class="project-list__item__title">保险APP</span>
                     </li>
-                    <li id="project-list__item--norwegian-ambassador" class="project-list__item" data-block-id="norwegian-ambassador">
+                    <li id="project-list__item--norwegian-ambassador" class="project-list__item"
+                        data-block-id="norwegian-ambassador">
                         <span class="project-list__item__title">汽车维修APP</span>
                     </li>
                     <li id="project-list__item--alu-mind" class="project-list__item" data-block-id="alu-mind">
@@ -1088,28 +1145,39 @@
 
 <script src="./script-abd2a7c7.js.下载"></script>
 <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-42231777-1', 'sanscolour.com');
-      ga('send', 'pageview');
+    ga('create', 'UA-42231777-1', 'sanscolour.com');
+    ga('send', 'pageview');
 
-    </script> <script>
-      var GoSquared = {};
-      GoSquared.acct = "GSN-615971-G";
-      (function(w){
-        function gs(){
-          w._gstc_lt = +new Date;
-          var d = document, g = d.createElement("script");
-          g.type = "text/javascript";
-          g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
-          var s = d.getElementsByTagName("script")[0];
-          s.parentNode.insertBefore(g, s);
+</script>
+<script>
+    var GoSquared = {};
+    GoSquared.acct = "GSN-615971-G";
+    (function (w) {
+        function gs() {
+            w._gstc_lt = +new Date;
+            var d = document, g = d.createElement("script");
+            g.type = "text/javascript";
+            g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+            var s = d.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(g, s);
         }
+
         w.addEventListener ?
-          w.addEventListener("load", gs, false) :
-          w.attachEvent("onload", gs);
-      })(window);
-    </script>  </body></html>
+                w.addEventListener("load", gs, false) :
+                w.attachEvent("onload", gs);
+    })(window);
+</script>
+</body>
+</html>
