--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </script>
     <![endif]-->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <title>饶苡苓个人作品展示</title>
+    <title>饶一琳作品册</title>
     <meta name="description"
           content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
     <meta name="HandheldFriendly" content="True">
