--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <ul class="project-list">
                     <li id="project-list__item--home" class="project-list__item is-active" data-block-id="home">
                         <span
-                                class="project-list__item__title">首页</span>
+                                class="project-list__item__title">页首</span>
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
                         <span class="project-list__item__title">理疗会所管理SASSp平台</span>
@@ -178,6 +178,9 @@
                     </li>
                     <li id="project-list__item--contact" class="project-list__item" data-block-id="contact">
                         <span class="project-list__item__title">物料作品</span>
+                    </li>
+                    <li id="project-list__item--me" class="project-list__item" data-block-id="me">
+                        <span class="project-list__item__title">关于我</span>
                     </li>
                 </ul>
             </div>
