--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             }
         }
     </style>
-    <script type="text/javascript" src="./tracker.js.下载"></script>
-    <script async="" src="./analytics.js.下载"></script>
-    <script src="./webfont.js.下载" type="text/javascript" async=""></script>
+    <script type="text/javascript" src="./tracker.js"></script>
+    <script async="" src="./analytics.js"></script>
+    <script src="./webfont.js" type="text/javascript" async=""></script>
     <script src="./jquery-2.1.1.min.js"></script>
     <script>
         // configuration
@@ -123,7 +123,7 @@
             s.parentNode.insertBefore(wf, s);
         })();
     </script>
-    <script src="./modernizr.custom-2fccca13.js.下载"></script>
+    <script src="./modernizr.custom-2fccca13.js"></script>
     <!--[if lt IE 9]>
     <script src="javascripts/vendor/scottjehl/respond.min-2928c408.js"></script><![endif]-->
     <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
@@ -140,7 +140,7 @@
         margin-left: 0px !important;
     }
     </style>
-    <script src="./15513.js.下载"></script>
+    <script src="./15513.js"></script>
 </head>
 <body class="index parallax-enabled">
 <div class="frame frame--top"></div>
@@ -1164,7 +1164,7 @@
     </div>
 </div>
 
-<script src="./script-abd2a7c7.js.下载"></script>
+<script src="./script-abd2a7c7.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
