--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <script src="./15513.js"></script>
 </head>
 <body class="index parallax-enabled">
-<div class="frame frame--top"></div>
-<div class="frame frame--right"></div>
-<div class="frame frame--bottom"></div>
+<!--<div class="frame frame&#45;&#45;top"></div>-->
+<!--<div class="frame frame&#45;&#45;right"></div>-->
+<!--<div class="frame frame&#45;&#45;bottom"></div>-->
 <div class="frame frame--left"></div>
 <nav class="nav is-animated is-disabled" role="navigation">
     <div class="project-list-holder" style="height: 1872px; margin-top: -468px;">
@@ -198,6 +198,11 @@
      style="transform: translate3d(0px, 0px, 0px);">
     <div class="home-content">
         <div class="container">
+            <div class="topContent">
+                <img src="images/usericon.png" alt="" class="userIcon">
+                <img src="images/logo.png" alt="" class="logotext">
+                <img src="images/bg_obj1.png" alt="" class="rightPic">
+            </div>
             <div class="container__centered container__centered--home">
                 <div class="logo" itemscope="" itemtype="http://schema.org/Organization"><a class="logo__link"
                                                                                             href="http://sanscolour.com/"
