--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="http://cdn.sanscolour.com/images/meta/SansColour_OpenGraphImage.jpg">
+    <link rel="apple-touch-icon" href="images/usericon.png">
     <link rel="apple-touch-icon" sizes="72x72"
-          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_72x72.gif">
+          href="images/usericon.png">
     <link rel="apple-touch-icon" sizes="114x114"
-          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_114x114.gif">
+          href="images/usericon.png">
     <link rel="apple-touch-icon" sizes="144x144"
-          href="http://cdn.sanscolour.com/images/meta/SansColour_AppleTouch_144x144.gif">
+          href="images/usericon.png">
     <meta property="og:title" content="Sans Colour — Graphic + Interactive design">
     <meta property="og:url" content="http://www.sanscolour.com/">
     <meta property="og:description"
@@ -42,7 +42,7 @@
           content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
     <meta name="twitter:image:src" content="http://cdn.sanscolour.com/images/meta/SansColour_TwitterCard.gif">
     <meta http-equiv="cleartype" content="on">
-    <link rel="shortcut icon" href="http://cdn.sanscolour.com/images/meta/SansColour_Shortcut_Icon_32x32.gif">
+    <link rel="shortcut icon" href="images/usericon.png">
     <style>
         .nav{
             display: none;
