--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         .style2 .container{
             width: 1920px;
             height: 700px;
-            margin: 0 30px;
+            /*margin: 0 30px;*/
             overflow: hidden;
         }
         .slider .content li{
@@ -167,15 +167,14 @@
 <!--<div class="frame frame&#45;&#45;top"></div>-->
 <!--<div class="frame frame&#45;&#45;right"></div>-->
 <!--<div class="frame frame&#45;&#45;bottom"></div>-->
-<div class="frame frame--left"></div>
+<!--<div class="frame frame&#45;&#45;left"></div>-->
 <nav class="nav is-animated is-disabled" role="navigation">
     <div class="project-list-holder" style="height: 1872px; margin-top: -468px;">
         <div class="v-center-container--small-and-up">
             <div class="v-center-container__inner--small-and-up">
                 <ul class="project-list">
                     <li id="project-list__item--home" class="project-list__item is-active" data-block-id="home">
-                        <span
-                                class="project-list__item__title">页首</span>
+                        <span class="project-list__item__title">页首</span>
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
                         <span class="project-list__item__title">理疗会所管理SASSp平台</span>
@@ -1251,7 +1250,7 @@
                 w.addEventListener("load", gs, false) :
                 w.attachEvent("onload", gs);
     })(window);
-    $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:10000,delay:0,direction:'x',auto:true,immediately:true});
+    $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:50000,delay:0,direction:'x',auto:true,immediately:true});
 
 </script>
 </body>
