--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                     <li id="project-list__item--hintmag" class="project-list__item" data-block-id="hintmag">
                         <span class="project-list__item__title">绘图</span>
                     </li>
-                    <li id="project-list__item--contact" class="project-list__item" data-block-id="contact">
+                    <li id="project-list__item--other" class="project-list__item" data-block-id="other">
                         <span class="project-list__item__title">物料作品</span>
                     </li>
-                    <li id="project-list__item--me" class="project-list__item" data-block-id="me">
+                    <li id="project-list__item--contact" class="project-list__item" data-block-id="contact">
                         <span class="project-list__item__title">关于我</span>
                     </li>
                 </ul>
@@ -232,27 +232,32 @@
                     <div class="container">
                         <ul class="content">
                             <li class="lunboContent">
-                                <img src="images/SASS2.png" alt="" class="SASS2">
-                                <img src="images/baoxian.png" alt="" class="baoxian">
-                                <img src="images/car.png" alt="" class="car">
-                                <img src="images/mall.png" alt="" class="mall">
-                                <img src="images/draw.png" alt="" class="draw">
-                                <img src="images/other.png" alt="" class="other">
-                                <img src="images/SASS.png" alt="" class="SASS">
-                                <!--<img src="images/SASS2.png" alt="" class="SASS2s">-->
-                                <!--<img src="images/car.png" alt="" class="cars">-->
+                                <a href="#block--akerBrygge" class="SASS2"><img src="images/SASS2.png" alt=""></a>
+                                <a href="#block--akerBryggeDisplay" class="baoxian"><img src="images/baoxian.png" alt="" ></a>
+                                <a href="#block--norwegian-ambassador" class="car"><img src="images/car.png" alt="" ></a>
+                                <a href="#block--alu-mind" class="mall"><img src="images/mall.png" alt=""></a>
+                                <a href="#block--hintmag" class="draw"><img src="images/draw.png" alt="" ></a>
+                                <a href="#block--other" class="other"><img src="images/other.png" alt="" ></a>
+                                <a href="#block--aspiro"  class="SASS"><img src="images/SASS.png" alt=""></a>
                             </li>
                             <li class="lunboContent">
-                                <img src="images/SASS2.png" alt="" class="SASS2">
-                                <img src="images/baoxian.png" alt="" class="baoxian">
-                                <img src="images/car.png" alt="" class="car">
-                                <img src="images/mall.png" alt="" class="mall">
-                                <img src="images/draw.png" alt="" class="draw">
-                                <img src="images/other.png" alt="" class="other">
-                                <img src="images/SASS.png" alt="" class="SASS">
+                                <a href="#block--akerBrygge" class="SASS2"><img src="images/SASS2.png" alt=""></a>
+                                <a href="#block--akerBryggeDisplay" class="baoxian"><img src="images/baoxian.png" alt="" ></a>
+                                <a href="#block--norwegian-ambassador" class="car"><img src="images/car.png" alt="" ></a>
+                                <a href="#block--alu-mind" class="mall"><img src="images/mall.png" alt=""></a>
+                                <a href="#block--hintmag" class="draw"><img src="images/draw.png" alt="" ></a>
+                                <a href="#block--other" class="other"><img src="images/other.png" alt="" ></a>
+                                <a href="#block--aspiro"  class="SASS"><img src="images/SASS.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
+                    <div class="slogan">
+                        <img src="images/bg_obj2.png" alt="" class="bg_obj2">
+                        <img src="images/text1.png" alt="" class="text1">
+                    </div>
+                <div class="slogans">
+                    <img src="images/bg_obj3.png" alt="" class="bg_obj3">
+                </div>
                 <!--</div>-->
                 <!--<div class="logo" itemscope="" itemtype="http://schema.org/Organization"><a class="logo__link"-->
                                                                                             <!--href="http://sanscolour.com/"-->
@@ -1167,6 +1172,94 @@
                         </div>
                     </div>
                 </div>
+                <div id="block--other" class="js-block block project project--other" data-block-id="other">
+                    <div class="project-content">
+                        <div class="js-slide"><h2 class="project-title">66666666</h2>
+                            <p class="project-description">Art direction and design for the annual online interactive
+                                fashion magazine ‘Hint Magazine’. Released during Paris Fashion Week.</p>
+                            <div class="project-details">
+                                <div class="project-details__item"><p class="milli"><span
+                                        class="project-details__item__label">MADE AT</span> <span
+                                        class="project-details__item__value"> <a href="http://www.bleed.no/"
+                                                                                 class="project-details__link"
+                                                                                 target="_blank"> <span>BLEED</span>
+                                </a> </span></p></div>
+                                <div class="project-details__item"><p class="milli"><span
+                                        class="project-details__item__label">Development and sound</span> <span
+                                        class="project-details__item__value"> Bjørn Gunnar Staal </span></p></div>
+                            </div>
+                        </div>
+                        <div class="row row--extra-bm">
+                            <figure class="js-slide"><img
+                                    data-src="//cdn.sanscolour.com/images/projects/hintmag/01-small.jpg"
+                                    alt="Hint Magazine: Gaslight — Logotype. Design by Sans Colour."
+                                    class="fs-img project__img fs-standard-resolution fs-src-find-replace"
+                                    data-width="1800" data-height="555"
+                                    src="./01-large(4).jpg"
+                                    style="display: inline;"></figure>
+                        </div>
+                        <div class="row row--multi-col js-slide">
+                            <div class="col col--1-3">
+                                <figure><img src="./02-large(5).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/02-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img hintmag__img--one fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                            <div class="col col--1-3">
+                                <figure><img src="./03-large(5).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/03-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img hintmag__img--two fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                                <figure><img src="./04-large(5).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/04-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img hintmag__img--three fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                            <div class="col col--1-3">
+                                <figure><img src="./05-large(5).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/05-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img hintmag__img--four fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                        </div>
+                        <div class="row row--multi-col js-slide">
+                            <div class="col col--1-3">
+                                <figure><img src="./06-large(4).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/06-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                            <div class="col col--1-3">
+                                <figure><img src="./07-large(4).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/07-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                            <div class="col col--1-3">
+                                <figure><img src="./08-large(2).jpg"
+                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/08-small.jpg"
+                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
+                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
+                                             data-width="580" data-height="738" style="display: inline;"></figure>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <figure class="js-slide"><img
+                                    src="./09-large(1).jpg"
+                                    data-src="//cdn.sanscolour.com/images/projects/hintmag/09-small.jpg"
+                                    alt="Hint Magazine: Gaslight — Gaslight Universe. Design by Sans Colour."
+                                    class="fs-img project__img fs-standard-resolution fs-src-find-replace"
+                                    data-width="1800" data-height="1130" style="display: inline;"></figure>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
