--- a/index.html
+++ b/index.html
@@ -121,13 +121,16 @@
         $(window).scroll(function(){
             var content = $('.home-content');
             var nav = $('.nav');
-            var left = $('.frame--left')
+            var left = $('.frame--left');
+            var returnTop = $('#returnTop');
             if(content.hasClass('is-hidden')){
                     nav.css('display','block');
-                left.css('display','block')
+                    left.css('display','block');
+                returnTop.css('display','block');
                 }else{
                 nav.css('display','none');
                 left.css('display','none');
+                returnTop.css('display','none');
 
 
             }
@@ -1312,6 +1315,10 @@
     </div>
 </div>
 
+
+<div id="returnTop">
+    <img src="images/top.png" alt="">
+</div>
 <script src="./script-abd2a7c7.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -1348,7 +1355,17 @@
                 w.attachEvent("onload", gs);
     })(window);
     $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:50000,delay:0,direction:'x',auto:true,immediately:true});
-
+    $("#returnTop").click(function () {
+        var speed=200;//滑动的速度
+        var nav = $('.nav');
+        var left = $('.frame--left');
+        var returnTop = $('#returnTop');
+        $('body,html').animate({ scrollTop: 0 }, speed);
+        nav.css('display','none');
+        left.css('display','none');
+        returnTop.css('display','none');
+        return false;
+    });
 </script>
 </body>
 </html>
